--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Medical_Clinic">
+        <activity android:name=".AppointmentActivity"></activity>
+        <activity android:name=".DisplayDoctorActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
