--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Medical_Clinic">
-        <activity android:name=".AppointmentActivity"></activity>
+        <activity
+            android:name=".ListOfPatientActivity"
+            android:exported="true" />
+        <activity
+            android:name=".doctor_mainpage"
+            android:exported="true" />
+        <activity android:name=".AppointmentActivity" />
         <activity android:name=".DisplayDoctorActivity" />
         <activity
             android:name=".MainActivity"
