YunrongLiu: finish the doctorViewTimeSlot and View Patient information

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,30 +9,42 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Medical_Clinic">
-        <activity android:name=".DisplayAppointmentActivity" />
+        <activity
+            android:name=".TimeslotActivity"
+            android:exported="true" />
 
-        <activity android:name=".DoctorInfoActivity"
-                  android:parentActivityName=".DisplayDoctorActivity">
+        <activity
+            android:name=".PatientInfoActivity"
+            android:exported="true" />
+        <activity
+            android:name=".DisplayPatientActivity"
+            android:exported="true" />
+        <activity android:name=".DisplayAppointmentActivity" />
+        <activity
+            android:name=".DoctorInfoActivity"
+            android:parentActivityName=".DisplayDoctorActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".DisplayDoctorActivity" />
         </activity>
-        <activity android:name=".PatientDashboardActivity"
-                  android:parentActivityName=".MainActivity">
+        <activity
+            android:name=".PatientDashboardActivity"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".DoctorDashboardActivity"
-                  android:parentActivityName=".MainActivity">
+        <activity
+            android:name=".DoctorDashboardActivity"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".DisplayDoctorActivity" />
-
-        <activity android:name=".RegisterActivity"
-                  android:parentActivityName=".MainActivity">
+        <activity
+            android:name=".RegisterActivity"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
